[gd_scene load_steps=2 format=3 uid="uid://e8xvhcw4y8o1e"]

[ext_resource type="Script" path="res://scripts/VRScene.gd" id="1_3h8jk"]

[node name="VRScene" type="Node3D"]
script = ExtResource("1_3h8jk")

[node name="XROrigin" type="XROrigin3D" parent="."]

[node name="XRCamera" type="XRCamera3D" parent="XROrigin"]

[node name="LeftController" type="XRController3D" parent="XROrigin"]
controller_id = 1

[node name="RightController" type="XRController3D" parent="XROrigin"]
controller_id = 2

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VRStatus" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = -80.0
text = "VR Mode Active"

[node name="HandTrackingButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
text = "Hand Tracking"

[node name="VoiceCommandButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 60.0
offset_right = -20.0
offset_bottom = 90.0
text = "Voice Commands"

[node name="BackButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 100.0
offset_right = -20.0
offset_bottom = 130.0
text = "Back to Menu"
